rename files and update references

--- a/crud-mvvm-xamarin-android.Frontend/crud-mvvm-xamarin-android.Frontend.csproj
+++ b/crud-mvvm-xamarin-android.Frontend/crud-mvvm-xamarin-android.Frontend.csproj
@@ -89,6 +89,10 @@
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidResource Include="Resources\layout\activity_articles.xml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+    </AndroidResource>
     <AndroidResource Include="Resources\layout\activity_main.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
@@ -129,11 +133,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\activity_article.xml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\layout\item_article.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
@@ -154,7 +153,7 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\activity_category.xml">
+    <AndroidResource Include="Resources\layout\activity_categories.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
