--- a/crud-mvvm-xamarin-android.Backend/crud-mvvm-xamarin-android.Backend.csproj
+++ b/crud-mvvm-xamarin-android.Backend/crud-mvvm-xamarin-android.Backend.csproj
@@ -70,6 +70,9 @@
       <Version>1.9.172</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.5" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>5.0.0.2662</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
