add ViewModels to the backend project (not implemented in the frontend)

--- a/crud-mvvm-xamarin-android.Backend/crud-mvvm-xamarin-android.Backend.csproj
+++ b/crud-mvvm-xamarin-android.Backend/crud-mvvm-xamarin-android.Backend.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ArticleService.cs" />
     <Compile Include="Services\CategoryService.cs" />
+    <Compile Include="ViewModels\ArticlesViewModel.cs" />
+    <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\CategoriesViewModel.cs" />
+    <Compile Include="ViewModels\CreateArticleViewModel.cs" />
+    <Compile Include="ViewModels\CreateCategoryViewModel.cs" />
+    <Compile Include="ViewModels\EditArticleViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
