apply MVVM pattern to the frontend project and other changes
the MVVM pattern is implemented for the following activities:
ArticlesActivity, CreateArticleActivity, EditArticleActivity,
CategoriesActivity, CreateCategoryActivity

code refactoring: naming conventions, methods, indentation, consistent and tidy code,
add/remove comments and TODO items, spacing, remove unused methods, etc.

NOTE: The changes are based on the history of the https://github.com/manuel-chinchi/crud-xamarin-android/tree/dev-mvvm-v2
branch of the base repository https://github.com/manuel-chinchi/crud-xamarin-android

--- a/crud-mvvm-xamarin-android.Frontend/crud-mvvm-xamarin-android.Frontend.csproj
+++ b/crud-mvvm-xamarin-android.Frontend/crud-mvvm-xamarin-android.Frontend.csproj
@@ -68,8 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activities\Contracts\IBaseActivity.cs" />
-    <Compile Include="Adapters\ArticleAdapter.cs" />
-    <Compile Include="Adapters\CategoryAdapter.cs" />
+    <Compile Include="Adapters\ArticlesAdapter.cs" />
+    <Compile Include="Adapters\CategoriesAdapter.cs" />
     <Compile Include="Activities\ArticlesActivity.cs" />
     <Compile Include="Activities\CategoriesActivity.cs" />
     <Compile Include="Activities\CreateArticleActivity.cs" />
